# rage

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  contract.md  install.sh  package.json
.codex/skills/rage-secrets/: SKILL.md
.codex/skills/rage-secrets/references/: checklist.md
.github/workflows/: ci.yml  release.yml
docs/: AI_HARNESS.md  ARCHITECTURE.md  DEFINITION_OF_DONE.md  TESTING.md
scripts/: harness-audit.sh  npm-install.js  qa.sh  smoke-gcp.sh  smoke-infisical.sh  smoke-local.sh  verify.sh
src/: agent_auth.rs  main.rs  tui.rs
tests/: cli.rs
