[package]
name = "rage"
version = "0.1.1"
edition = "2024"

[dependencies]
age = "0.11.3"
anyhow = "1.0.102"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.28"
dirs = "6.0.0"
dotenvy = "0.15.7"
ratatui = "0.29"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.8"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.4"
tempfile = "3.23.0"
tiny_http = "0.12.0"
